Fixing the social media button layout

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Final Project</title>
+    <title>RadiantHorizonz</title>
     <link rel="stylesheet" type="text/css" href="CSS/final.css">
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 </head>
@@ -12,7 +12,7 @@
     <div id="header">
         <div id="navdiv">
         <ul id="navBar">
-            <h2 class="nameHeader"><a href="index.html">RadientHorizonz</a></h2>
+            <h2 class="nameHeader"><a href="index.html">RadiantHorizonz</a></h2>
             <div id="block">
                 <li><a href="#">Login</a></li>
                 <li><a href="#">Services</a></li>
@@ -39,6 +39,7 @@
         <a href="https://www.instagram.com/kynosuke/?hl=en">
             <img src="CSS/img/socialMedia/instagramIconWhite.png" alt="Insta">
         </a>
+        <br>
         <a href="https://www.facebook.com/kynosuke">
             <img src="CSS/img/socialMedia/facebookIconWhite.png" alt="fbook">
         </a>
