Updating homepage website

--- a/gallery.html
+++ b/gallery.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Final Project</title>
+    <title>RadiantHorizonz</title>
     <link rel="stylesheet" type="text/css" href="CSS/gallery.css">
     <link rel="stylesheet" href="CSS/simplelightbox.min.css">
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
@@ -12,13 +12,12 @@
     <div id="header">
         <div id="navdiv">
         <ul id="navBar">
-            <h2 class="nameHeader"><a href="index.html">RadientHorizonz</a></h2>
+            <h2 class="nameHeader"><a href="index.html">RadiantHorizonz</a></h2>
             <div id="block">
-            <li><a href="#">Login</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
-            <li><a href="aboutus.html">About Us</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="#">Merch</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="aboutus.html">About</a></li>
+                <li><a href="gallery.html">Portfolio</a></li>
             </div>
         </ul>
         </div>
